add new website from server na

--- a/xem-phim-bo/tam-biet-trai-dat/index.html
+++ b/xem-phim-bo/tam-biet-trai-dat/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1664,7 +1664,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lust, Caution
             </span>
             <span class="list-top-movie-item-view">
-             65 lượt xem
+             67 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
             </span>
@@ -1686,7 +1686,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Dragon Hunting.Soul Suppressing Coffin
             </span>
             <span class="list-top-movie-item-view">
-             62 lượt xem
+             63 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
             </span>
@@ -1708,29 +1708,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Brothers For Life (Season 2)
             </span>
             <span class="list-top-movie-item-view">
-             53 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
-           <span class="status">
-            FHD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thiếu Niên Ca Hành
-            </span>
-            <span class="list-top-movie-item-en">
-             The Blood of Youth
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
+             54 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1752,7 +1730,29 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             51 lượt xem
+             54 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
+           <span class="status">
+            FHD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thiếu Niên Ca Hành
+            </span>
+            <span class="list-top-movie-item-en">
+             The Blood of Youth
+            </span>
+            <span class="list-top-movie-item-view">
+             52 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1773,40 +1773,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/loi-hua-vinh-hang" title="Lời Hứa Vĩnh Hằng">
+          <a class="list-top-movie-link" href="/phim-moi/schitts-creek-phan-2" title="Schitt’s Creek (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loi-hua-vinh-hang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/schitts-creek-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lời Hứa Vĩnh Hằng
+             Schitt’s Creek (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Kaew Khon Lek
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/linh-hon-quy-du" title="Linh Hồn Quỷ Dữ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/linh-hon-quy-du-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Linh Hồn Quỷ Dữ
-            </span>
-            <span class="list-top-movie-item-en">
-             1921
+             Schitt's Creek (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1817,18 +1795,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vua-mao-hiem" title="Vua Mạo Hiểm">
+          <a class="list-top-movie-link" href="/phim-moi/song-bac-phan-2" title="Sòng Bạc – Phần 2">
            <span class="status">
-            HD Vietsub
+            FHD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vua-mao-hiem-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/song-bac-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vua Mạo Hiểm
+             Sòng Bạc – Phần 2
             </span>
             <span class="list-top-movie-item-en">
-             Dr. Wai in the Scripture with No Words
+             Big Bet Season 2
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1839,21 +1817,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/em-re-moi-lon-va-chi-dau-dam-dang" title="Em Rể Mới Lớn Và Chị Dâu Đảm Đang">
+          <a class="list-top-movie-link" href="/phim-moi/chuyen-tinh-havard" title="Chuyện Tình Havard">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/em-re-moi-lon-va-chi-dau-dam-dang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-tinh-havard-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Em Rể Mới Lớn Và Chị Dâu Đảm Đang
+             Chuyện Tình Havard
             </span>
             <span class="list-top-movie-item-en">
-             애인 2명 불륜하는 막장 유부녀
+             Love Story in Harvard
             </span>
             <span class="list-top-movie-item-view">
-             10 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1861,21 +1839,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-doi-dao-nghich" title="Cuộc đời đảo nghịch">
+          <a class="list-top-movie-link" href="/phim-moi/homeward-bound-the-incredible-journey" title="Homeward Bound: The Incredible Journey">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-doi-dao-nghich-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/homeward-bound-the-incredible-journey-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cuộc đời đảo nghịch
+             Homeward Bound: The Incredible Journey
             </span>
             <span class="list-top-movie-item-en">
-             Transformation
+             Homeward Bound: The Incredible Journey
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/de-che-ngam-phan-5" title="Đế Chế Ngầm (Phần 5)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/de-che-ngam-phan-5-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Đế Chế Ngầm (Phần 5)
+            </span>
+            <span class="list-top-movie-item-en">
+             Boardwalk Empire (Season 5)
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
