add new website from server na

--- a/xem-phim-bo/lap-harem-chon-me-cung-o-di-gioi/index.html
+++ b/xem-phim-bo/lap-harem-chon-me-cung-o-di-gioi/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1663,40 +1663,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/fear-of-rain" title="Fear of Rain">
+          <a class="list-top-movie-link" href="/phim-moi/tro-ban" title="Trò Bẩn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/fear-of-rain-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tro-ban-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Fear of Rain
+             Trò Bẩn
             </span>
             <span class="list-top-movie-item-en">
-             Fear of Rain
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/clickbait" title="Clickbait">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/clickbait-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Clickbait
-            </span>
-            <span class="list-top-movie-item-en">
-             Clickbait
+             Black's Game
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1707,18 +1685,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chong-cu-tinh-moi" title="Chồng Cũ Tình Mới">
+          <a class="list-top-movie-link" href="/phim-moi/tieng-thet" title="Tiếng Thét">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chong-cu-tinh-moi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tieng-thet-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chồng Cũ Tình Mới
+             Tiếng Thét
             </span>
             <span class="list-top-movie-item-en">
-             Love, Again
+             Scream
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/me-cua-nang-dau" title="Mẹ Của Nàng Dâu">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/me-cua-nang-dau-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Mẹ Của Nàng Dâu
+            </span>
+            <span class="list-top-movie-item-en">
+             Mother of the Bride
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thien-tue-dai-nhan-khong-de-choc" title="Thiên Tuế Đại Nhân Không Dễ Chọc">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thien-tue-dai-nhan-khong-de-choc-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thiên Tuế Đại Nhân Không Dễ Chọc
+            </span>
+            <span class="list-top-movie-item-en">
+             Re Bu Qi De Qian Sui Da Ren
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1729,43 +1751,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hang-xom-tot" title="Hàng Xóm Tốt">
+          <a class="list-top-movie-link" href="/phim-moi/co-maisel-ky-dieu-phan-1" title="Cô Maisel Kỳ Diệu (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hang-xom-tot-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-maisel-ky-dieu-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hàng Xóm Tốt
+             Cô Maisel Kỳ Diệu (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             The Good Neighbor
+             The Marvelous Mrs. Maisel (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoi-song-dap-gio" title="Cưỡi Sóng Đạp Gió">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoi-song-dap-gio-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cưỡi Sóng Đạp Gió
-            </span>
-            <span class="list-top-movie-item-en">
-             Duckweed
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
